# sqlalchemy-transactional

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
scripts/: build-dist.sh  check.sh  release-check.sh  release-commit.sh  test.sh  toc.sh
src/sqlalchemy_transactional/: asyncio.py  common.py
src/sqlalchemy_transactional/internal/: __init__.py  runtime.py
tests/: conftest.py  test_asyncio.py  test_internal_runtime.py  test_quickstart_fastapi.py  test_sqlalchemy_transactional_asyncio.py
